FUCK YEAH squashes some major bugs and finishes a basic implementation of the quiz logic

--- a/browser/scss/quiz/main.scss
+++ b/browser/scss/quiz/main.scss
@@ -54,3 +54,22 @@ h3.question-text {
   color: $lavender;
   background-color: $dark-gray;
 }
+
+#quiz-question {
+  .padded {
+    padding-top: 15px;
+  }
+}
+
+.quiz-complete {
+  .header {
+    color: $dark-purple;
+  }
+
+  .ui.icon.header .icon {
+    color: $bright-teal;
+  }
+  .ui.center.aligned.header, .ui.centered.header {
+    color: $bright-teal;
+  }
+}
